--- a/stackline_retail/package.json
+++ b/stackline_retail/package.json
@@ -5,13 +5,11 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.98",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "axios": "^1.7.2",
     "history": "^5.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -50,6 +48,8 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "^16.0.0",
+    "redux-mock-store": "^1.5.4",
     "tailwindcss": "^3.4.4"
   }
 }
